[package]
name = "nym-rpc"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = { version = "4.5.39", features = ["derive"] }
dashmap = "6.1.0"
dirs = "6.0.0"
nym-bin-common = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
nym-network-defaults = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
nym-sdk = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
# nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
rustyline = "16.0.0"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = "1.17.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
